fix: refatoracao final, correcao de relatorio e busca simplificadaCorpo: 1-Renomeados pacotes para br.gov.gestaosei; 2-Corrigido Dockerfile para pular testes e instalar fontes; 3-Ajustado application.properties para PostgreSQL; 4-Refatorado ProcessoController para busca simplificada e query params; 5-Corrigido relatorio PDF (fontes, datas e filtros); 6-Implementado historico de processos.